[package]
name = "mappy"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.3.1"
rand = "0.7.3"

[[bench]]
name = "shortest_path"
harness = false

[[bench]]
name = "field_of_view"
harness = false

[dependencies]
nalgebra = "0.29.0"
ndarray = "0.15.4"
pathfinding = "2.2.1"
rand = "0.7.3"