[package]
name = "mappy"
version = "0.1.0"
edition = "2021"

[profile.bench]
opt-level = 2
lto = true
overflow-checks = false

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "shortest_path"
harness = false

[[bench]]
name = "field_of_view"
harness = false

[[bench]]
name = "adjacent_paths"
harness = false

[dependencies]
nalgebra = "0.29.0"
ndarray = "0.15.4"
pathfinding = "4.2.1"
rand = "0.8.5"